feat: migrating commands
* feat: add language keys for rule command

* feat: chooseclass command

* perf: increase performance by using gett instead

* chore: restyle rule embed

* feat: retry message

* chore: edit extension settings

* fix(deps): update all non-major dependencies

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update dependency husky to v8 (#16)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update actions/setup-node digest to 17f8bd9 (#17)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* chore(deps): update commitlint monorepo to v17 (#18)

Co-authored-by: Renovate Bot <bot@renovateapp.com>

* feat: help command

* feat: start buttons

* feat: profile and buy commands

* chore: lockfile

* chore(deps): fusejs

* feat: use n recover commands

* feat: drink heal inventory commands

* chore: downgrade yarn

* chore: upgrade yarn

* chore: workflows

* fix: build n i18n

* feat: cooldown info invite

* feat: i18n

* feat: party sell give

* chore: deps

* chore: deps

* fix: buy sell

* feat: top

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Renovate Bot <bot@renovateapp.com>

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -1,13 +1,169 @@
 {
+	"aliases": "Aliases",
+	"armor": "Armor",
+	"assassin": "Assassin",
+	"awake": "Awake",
+	"baseStats": "Stats",
 	"bigTurn": "Big turn",
+	"buy": "Buy",
 	"cancel": "Cancel",
+	"challenges": "Challenges",
 	"chooseClass": "Choose class",
+	"class": "Class",
+	"consumables": "Consumables",
+	"cooldown": "Cooldown",
+	"create": "Create",
+	"daily": "Daily",
+	"descriptions": {
+		"awakeName": "Your character name",
+		"buyItem": "The item you want to buy.",
+		"buyQuantity": "The amount of items you want to buy.",
+		"giveHunter": "The Hunter you want to give.",
+		"giveQuantity": "The amount of golds you want to give.",
+		"hunterInventory": "The hunter to show.",
+		"hunterProfile": "The hunter to show.",
+		"language": "The language you want",
+		"page": "The page number",
+		"partyCreate": "Create a party",
+		"partyDisband": "Delete the party",
+		"partyGive": "Give the loots to a party member",
+		"partyGiveQuantity": "Loots quantity",
+		"partyInfo": "Party's information",
+		"partyInvite": "Invite another Hunter",
+		"partyKick": "Kick a party member",
+		"partyLeave": "Leaves the party",
+		"partyLoots": "Party's loots",
+		"partyMember": "Party's member",
+		"partyName": "Party's name (\"Leader name's party\")",
+		"partyTransfer": "Transfer the leader role to another member",
+		"sellItem": "The item you want to sell.",
+		"sellQuantity": "The amount of items you want to sell.",
+		"showInventory": "Should the inventory be shown to other people?",
+		"showProfile": "Should the profile be shown to other people?",
+		"term": "The things you need help",
+		"topGlobal": "Top hunters global",
+		"topGlobalGold": "Top hunters by gold",
+		"topGlobalLevel": "Top hunters by level",
+		"topGlobalRank": "Top hunters by rank",
+		"topServer": "Top hunters in this server",
+		"topServerGold": "Top hunters in this server by gold",
+		"topServerLevel": "Top hunters in this server by level",
+		"topServerRank": "Top hunters in this server by rank",
+		"useItem": "The item you wanna use."
+	},
+	"disband": "Disband",
+	"drink": "Drink",
+	"drop": "Drops",
+	"examples": "Examples",
+	"fighter": "Fighter",
+	"gate": "Gate",
+	"give": "Give",
+	"global": "Global",
+	"gloves": "Gloves",
+	"guild": "Guild",
+	"heal": "Heal",
+	"healer": "Healer",
+	"helmet": "Helmet",
 	"help": "Help",
+	"hunter": "Hunter",
+	"info": "Info",
+	"information": "Information",
+	"inventory": "Inventory",
+	"invite": "Invite",
+	"item": "Item",
+	"keys": "Keys",
+	"kick": "Kick",
+	"language": "Language",
+	"leave": "Leave",
+	"level": "Level",
+	"levelDepends": {
+		"amount": "Amount",
+		"cooldown": "Cooldown",
+		"cost": "Mana Cost",
+		"exp": "Exp",
+		"range": "Range",
+		"size": "Size",
+		"turns": "Duration"
+	},
+	"library": "Library",
 	"links": "Useful links",
+	"loots": "Loots",
+	"mage": "Mage",
+	"materials": "Materials",
+	"max": "Max",
+	"missingField": "Missing these fields: {{fields}}",
+	"money": "Money",
+	"name": "Name",
+	"necklace": "Necklace",
+	"no": "No",
+	"none": "none",
+	"notEnough": "Not enough {{what}}!",
+	"page": "Page",
+	"page_format": "Page {{page}}/{{total}}",
 	"party": "Party",
 	"profile": "Profile",
+	"quantity": "Quantity",
+	"ranger": "Ranger",
+	"rank": "Rank",
+	"ready": "Ready",
+	"recover": "Recover",
+	"ring": "Ring",
 	"rule": "Rules",
 	"selectMenuPlaceholder": "Make a selection",
+	"sell": "Sell",
+	"sellValue": "Sell value",
+	"server": "Server",
+	"shard": "Shard",
+	"shoes": "Shoes",
+	"show": "Show",
+	"skills": "Skills",
 	"smallTurn": "Small turn",
-	"welcome": "Welcome"
+	"species": "Species",
+	"start": "Start",
+	"tanker": "Tanker",
+	"term": "Terms",
+	"timeUnits": {
+		"day": {
+			"1": "day",
+			"DEFAULT": "days"
+		},
+		"hour": {
+			"1": "hour",
+			"DEFAULT": "hours"
+		},
+		"minute": {
+			"1": "minute",
+			"DEFAULT": "minutes"
+		},
+		"month": {
+			"1": "month",
+			"DEFAULT": "months"
+		},
+		"second": {
+			"1": "second",
+			"DEFAULT": "seconds"
+		},
+		"week": {
+			"1": "week",
+			"DEFAULT": "weeks"
+		},
+		"year": {
+			"1": "year",
+			"DEFAULT": "years"
+		}
+	},
+	"timeout": "Time out",
+	"top": "Top",
+	"transfer": "Transfer",
+	"type": "Type",
+	"unspecialized": "Unspecialized",
+	"uptime": "Uptime",
+	"usableKeys": "Keys",
+	"usage": "Usage",
+	"use": "Use",
+	"vote": "Vote",
+	"weapon": "Weapon",
+	"weekly": "Weekly",
+	"welcome": "Welcome",
+	"yes": "Yes"
 }
